--- a/DontDisappoint/index.html
+++ b/DontDisappoint/index.html
@@ -22,7 +22,7 @@
 				</div>
 
 				<div class="section" id="ch1">
-					<a href="#">I MUST HAVE A PHILOSOPHY AAAAAY </a>
+					I MUST HAVE A PHILOSOPHY
 					<div class="divider">
 						<img src="public/DD_divider.png">
 					</div>
