--- a/DontDisappoint/index.html
+++ b/DontDisappoint/index.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<div class="background">
-			<div class="container">
+			<div class="container tk-proxima-nova">
 				<div class="header">
 					<img class="top" src="public/DD_animation.gif">
 				</div>
