--- a/DontDisappoint/index.html
+++ b/DontDisappoint/index.html
@@ -8,15 +8,14 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="DDscript.js"></script>
 
-        <script src="//use.typekit.net/kyp2oph.js"></script>
-		<script>try{Typekit.load();}catch(e){}</script>
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 
     </head>
 
 
 	<body>
 		<div class="background">
-			<div class="container tk-proxima-nova">
+			<div class="container">
 				<div class="header">
 					<img class="top" src="public/DD_animation.gif">
 				</div>
