--- a/DontDisappoint/index.html
+++ b/DontDisappoint/index.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Don't Disappoint Task-Managing App</title>
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="DDstyle.css">
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="DDscript.js"></script>
-
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 
     </head>
 
@@ -21,7 +20,7 @@
 				</div>
 
 				<div class="section" id="ch1">
-					I MUST HAVE A PHILOSOPHY
+					I MUST HAVE A PHILOSOPHY AAAA
 					<div class="divider">
 						<img src="public/DD_divider.png">
 					</div>
