major changes to disappointment

--- a/DontDisappoint/index.html
+++ b/DontDisappoint/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Don't Disappoint Task-Managing App</title>
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="DDstyle.css">
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -20,7 +21,7 @@
 				</div>
 
 				<div class="section" id="ch1">
-					I MUST HAVE A PHILOSOPHY AAAA
+					I MUST HAVE A PHILOSOPHY
 					<div class="divider">
 						<img src="public/DD_divider.png">
 					</div>
@@ -45,9 +46,8 @@
 					<div class="content" id="ch2content">
 						<div class="text">
 							<p>In this app, a 'task' is referred to as a 'commitment.' Each commitment is made 'To' someone, and 'For' a particular task, and has a deadline.</p>
-
-							<p>TO MAKE A NEW COMMITMENT</p>
-							<p>[animation here]</p>
+							<p class="subheader"><br>MAKING A COMMITMENT:</p>
+							<img src="public/Animations01.gif" class="animation">
 
 						</div>
 						<div class="divider">
@@ -67,11 +67,11 @@
 						<div class="text">
 							<p>As the deadline approaches, commitments expand. The closer the deadline is, the greater speed at which the commitment will expand.</p>
 
-							<p>[animation here]</p>
+							<img src="public/Animations02.gif" class="animation">
 
 							<p>I tap the commitment once in order to remind myself of what is I am meant to do for that person.</p>
 
-							<p>[animation here]</p>
+							<img src="public/Animations03.gif" class="animation">
 
 						</div>
 						<div class="divider">
@@ -92,11 +92,11 @@
 							
 							<p>If the commitment's expansion exceeds a certain threshhold, or I miss a deadline, the app will send a notification to the committee. They may respond with a 'prod', notifications aimed at shaming me into action.</p>
 
-							<p>IF I BREAK A COMMITMENT</p>
-							<p>[animation here]</p>
+							<p class="subheader"><br>IF I BREAK A COMMITMENT</p>
+							<img src="public/Animations04.gif" class="animation">
 
-							<p>RECEIVING A PROD</p>
-							<p>[animation here]</p>
+							<p class="subheader"><br>RECEIVING A PROD</p>
+							<img src="public/Animations05.gif" class="animation">
 
 						</div>
 						<div class="divider">
@@ -116,7 +116,7 @@
 						<div class="text">
 							<p>I tap the commitment twice in order to shrink its size. The app will interpret these taps to mean that I am working on my commitments.</p>
 
-							<p>[animation here]</p>
+							<img src="public/Animations06.gif" class="animation">
 
 						</div>
 						<div class="divider">
@@ -136,8 +136,8 @@
 						<div class="text">
 							<p>I tap the commitment three times in order to remove it from the list. Three taps indicates that I have fulfilled my commitment for the commitee.</p>
 
-							<p>COMMITMENTS FULFILLED</p>
-							<p>[animation here]</p>
+							<p class="subheader"><br>COMMITMENTS FULFILLED</p>
+							<img src="public/Animations07.gif" class="animation">
 
 						</div>
 						<div class="divider">
