--- a/DontDisappoint/index.html
+++ b/DontDisappoint/index.html
@@ -28,7 +28,7 @@
 				</div>
 					<div class="content" id="ch1content">
 						<div class="text">
-							I believe that true motivation lies in fear. The most effective kind of motivation-inducing anxiety springs from the social contracts we form with others and the assurances we give ourselves when something must be done. This is a task-managing app that will tap into my primordial fear of dissappointing not only myself but those around me. If it doesn't meet this goal, I fear I will have wasted several hours preparing this proposal.
+							I believe that true motivation lies in fear. The most effective kind of motivation-inducing anxiety springs from the social contracts I form with others and the assurances I give myself that something will be done; on time, on budget. This is a task-managing app that will tap into my primordial fear of dissappointing not only myself but those around me. If this document does not adequately express that intention, I apologize for wasting your time with this proposal.
 						</div>
 						<div class="divider">
 							<img src="public/DD_divider.png">
@@ -45,7 +45,7 @@
 				</div>
 					<div class="content" id="ch2content">
 						<div class="text">
-							<p>In this app, a 'task' is referred to as a 'commitment.' Each commitment is made 'To' someone, and 'For' a particular task, and has a deadline.</p>
+							<p>In this app, a 'task' is referred to as a 'commitment.' Each commitment had a deadline, is made 'To' someone, a 'commit-tee', and 'For' a particular task.</p>
 							<p class="subheader"><br>MAKING A COMMITMENT:</p>
 							<img src="public/Animations01.gif" class="animation">
 
@@ -71,6 +71,7 @@
 
 							<p>I tap the commitment once in order to remind myself of what is I am meant to do for that person.</p>
 
+							<p class="subheader"><br>SINGLE TAP</p>
 							<img src="public/Animations03.gif" class="animation">
 
 						</div>
@@ -90,10 +91,12 @@
 					<div class="content" id="ch4content">
 						<div class="text">
 							
-							<p>If the commitment's expansion exceeds a certain threshhold, or I miss a deadline, the app will send a notification to the committee. They may respond with a 'prod', notifications aimed at shaming me into action.</p>
+							<p>If the commitment's expansion exceeds a certain threshhold, caused by missing a deadline, the app will send a notification to the commit-tee.</p>
 
 							<p class="subheader"><br>IF I BREAK A COMMITMENT</p>
 							<img src="public/Animations04.gif" class="animation">
+
+							<p>The commit-tee may respond with a 'prod', notifications aimed at pressuring me into action.</p>
 
 							<p class="subheader"><br>RECEIVING A PROD</p>
 							<img src="public/Animations05.gif" class="animation">
@@ -116,6 +119,7 @@
 						<div class="text">
 							<p>I tap the commitment twice in order to shrink its size. The app will interpret these taps to mean that I am working on my commitments.</p>
 
+							<p class="subheader"><br>DOUBLE TAP</p>
 							<img src="public/Animations06.gif" class="animation">
 
 						</div>
@@ -134,9 +138,9 @@
 				</div>
 					<div class="content" id="ch6content">
 						<div class="text">
-							<p>I tap the commitment three times in order to remove it from the list. Three taps indicates that I have fulfilled my commitment for the commitee.</p>
+							<p>I tap the commitment three times in order to remove it from the list. Three taps indicates that I have fulfilled my commitment to that commit-tee.</p>
 
-							<p class="subheader"><br>COMMITMENTS FULFILLED</p>
+							<p class="subheader"><br>TRIPLE TAP</p>
 							<img src="public/Animations07.gif" class="animation">
 
 						</div>
