All versions of tiny screen added

--- a/TinyScreen/index.html
+++ b/TinyScreen/index.html
@@ -26,11 +26,35 @@
         		margin-left:610px;
 
         	}
+
+            .six {
+                position:absolute;
+                display: inline-block;
+                margin-left:20px;
+                margin-top:800px;
+            }
+
+            .five {
+                position:absolute;
+                display: inline-block;
+                margin-top:1200px;
+                margin-left:400px;
+            }
+            
+            .four {
+                position:absolute;
+                display: inline-block;
+                margin-top:910px;
+                margin-left:820px;
+
+            }
         </style>
 
     </head>
 
     <body>
+
+        <a href="version02.html"> Version02 </a> 
 
 	    <div class="container">
 	    	<div class="one">
@@ -43,5 +67,17 @@
 	    		<img src="Design02_Pt03.gif"/>
 	    	</div>
 	    </div>
+
+        <div class="container">
+            <div class="four">
+                <img src="Design03.gif"/>
+            </div>
+            <div class="five">
+                <img src="Design03_02.gif"/>
+            </div>
+            <div class="six">
+                <img src="Design03_03.gif"/>
+            </div>
+        </div>
 
     </body>
