--- a/TinyScreen/version03.html
+++ b/TinyScreen/version03.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tiny Screen Test</title>
+        <title>Small Talk</title>
 
         <style>
 
@@ -43,7 +43,7 @@
                 display: inline-block;
                 width:200px;
                 height:300px;
-                border:1px solid red;
+                border:3px solid red;
                 margin-top:-80px;
                 margin-left:110px;
 
@@ -131,7 +131,7 @@
 
                     window.setInterval (
                         function () {
-                        var myArray = ['Eye03.gif', 'Eye03_alt1.gif', 'Eye03_alt2.gif', 'Eye03_alt3.gif', 'Eye03_alt4.gif', 'Eye03_alt5.gif'];
+                        var myArray = ['Eye03.gif', 'Eye03.gif', 'Eye03_alt1.gif', 'Eye03_alt2.gif'];
 
                         var rand = myArray[Math.floor(Math.random() * myArray.length)];
                         // Math.floor(Math.random(...)) call rounds down, so don't have to do .length - 1
@@ -150,7 +150,7 @@
 
                     window.setInterval (
                         function () {
-                        var myArray = ['Eye1.gif', 'Eye1_alt1.gif', 'Eye1_alt2.gif', 'Eye1_alt3.gif', 'Eye1_alt4.gif', 'Eye1_alt5.gif', 'Eye1_alt6.gif'];
+                        var myArray = ['Eye1.gif', 'Eye1.gif', 'Eye1_alt1.gif', 'Eye1_alt2.gif'];
 
                         var rand = myArray[Math.floor(Math.random() * myArray.length)];
                         // Math.floor(Math.random(...)) call rounds down, so don't have to do .length - 1
@@ -171,7 +171,7 @@
 
                         window.setInterval (
                             function () {
-                            var myArray = ['Eye02.gif', 'Eye02_alt1.gif', 'Eye02_alt2.gif', 'Eye02_alt3.gif', 'Eye02_alt4.gif', 'Eye02_alt5.gif', 'Eye02_alt6.gif'];
+                            var myArray = ['Eye02.gif', 'Eye02.gif', 'Eye02_alt1.gif', 'Eye02_alt2.gif'];
 
                             var rand = myArray[Math.floor(Math.random() * myArray.length)];
                             // Math.floor(Math.random(...)) call rounds down, so don't have to do .length - 1
