made changes to placeholder text

--- a/TinyScreen/Eye3.html
+++ b/TinyScreen/Eye3.html
@@ -14,9 +14,14 @@
                 width:100%;
             }
 
+            .text {
+                position:absolute;
+                width:100%;
+                padding-top:100px;
+            }
+
             p {
                 text-align: center;
-                margin-top:250px;
                 color:red;
                 font-family: Helvetica;
                 font-size: 50px;
@@ -32,9 +37,9 @@
 
 	    <div class="container">
             <img id="display">
-
-            <p class="text">SMALL TALK</p>
-
+                <div class="text">
+                    <p class="text">SMALL TALK</p>
+                </div>
 	    	<script>
 
             window.setInterval (
