more pages for condensation

--- a/condensation/index.html
+++ b/condensation/index.html
@@ -2,21 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>* * * * condensation * * * *</title>
+        <title>* * * * condensation 0 * * * *</title>
         <link rel="stylesheet" type="text/css" href="condensation.css">
 
     </head>
 
     <body>
-    	<div class="container">
-    		<img src="condense2.png">
-    	</div>
-    	<div class="container">
-    		<img src="condense_black.png">
-    	</div>
+        <div class="bg">
+            <img src="condense_black.png">          
+        </div>
 
-    	<div class="container">
-    		<img src="condense2.png" class="bg">
-    		<img src="condense_black.png" class="bg">    		
-    	</div>
+        <div class="box">
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense.png" class="top">
+            </div>
+        </div>
     </body>
