--- a/condensation/index2.html
+++ b/condensation/index2.html
@@ -2,19 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>* * * * condensation * * * *</title>
+        <title>* * * * condensation 2 * * * *</title>
         <link rel="stylesheet" type="text/css" href="condensation.css">
 
     </head>
 
     <body>
-    	<div class="container">
-    		<img src="condense_black.png" class="bg">    		
+    	<div class="bg">
+    		<img src="condense_black.png">    		
     	</div>
-        <div class="container">
-            <img src="condense2.png" class="top">
-        </div>
-        <div class="container">
-            <img src="condense2.png" class="top">
+
+        <div class="box">
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
+            <div class="container">
+                <img src="condense2.png" class="top">
+            </div>
         </div>
     </body>
