changed index names

--- a/condensation/index0.html
+++ b/condensation/index0.html
@@ -2,40 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>* * * * condensation 3 * * * *</title>
+        <title>* * * * condensation 0 * * * *</title>
         <link rel="stylesheet" type="text/css" href="condensation.css">
 
     </head>
 
     <body>
-    	<div class="bg">
-    		<img src="condense_black.png">    		
-    	</div>
+        <div class="bg">
+            <img src="condense_black.png">          
+        </div>
 
         <div class="box">
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
             <div class="container">
-                <img src="condense3.png" class="top">
+                <img src="condense.png" class="top">
             </div>
         </div>
     </body>
