--- a/condensation/index6.html
+++ b/condensation/index6.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>* * * * condensation 6 * * * *</title>
+        <title>* * * * condensation: 100% * * * *</title>
         <link rel="stylesheet" type="text/css" href="condensation.css">
 
     </head>
@@ -13,29 +13,34 @@
     	</div>
 
         <div class="box">
+            <div>
+                <p>saturation 100%</p>
+                <p>find another coffeeshop</p>
+            </div>
+
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
             <div class="container">
-                <img src="condense6.png" class="top">
+                <img src="condense7.png" class="top">
             </div>
         </div>
     </body>
