--- a/condensation/index6.html
+++ b/condensation/index6.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>* * * * condensation: 100% * * * *</title>
         <link rel="stylesheet" type="text/css" href="condensation.css">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 
     </head>
 
