--- a/condensation/index6.html
+++ b/condensation/index6.html
@@ -13,11 +13,13 @@
     		<img src="condense_black.png">    		
     	</div>
 
+        <div class="text">
+            <img src="condense.png" class="overtext">
+            <p>SATURATION 100%</p>
+            <p class="subtext">FIND ANOTHER COFFEE SHOP</p>
+        </div>
+
         <div class="box">
-            <div>
-                <p>saturation 100%</p>
-                <p>find another coffeeshop</p>
-            </div>
 
             <div class="container">
                 <img src="condense7.png" class="top">
